--- a/css/style.css
+++ b/css/style.css
@@ -108,22 +108,22 @@ img, video, audio {
   background: #ccc;
 }
 
-.clearfix: after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  height: 0;
-  line-height: 0;
-}
+/*.clearfix: after {*/
+/*  content: ".";*/
+/*  display: block;*/
+/*  clear: both;*/
+/*  visibility: hidden;*/
+/*  height: 0;*/
+/*  line-height: 0;*/
+/*}*/
 
-[class*="col-"] {
-  margin-left: 2%;
-}
+/*[class*="col-"] {*/
+/*  margin-left: 2%;*/
+/*}*/
 
-.first {
-  margin-left: 0%;
-}
+/*.first {*/
+/*  margin-left: 0%;*/
+/*}*/
 
 /*/// SECTIONS ///*/
 
