Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -121,9 +121,9 @@ img, video, audio {
   margin-left: 2%;
 }
 
-/*.first {*/
-/*  margin-left: 0%;*/
-/*}*/
+.first {
+  margin-left: 0%;
+}
 
 /*/// SECTIONS ///*/
 
